# lambda-runtime-tweeter-prepare

./: .gitignore  Makefile  README.md  pyproject.toml  template.yml
scripts/: create_access_key.py
