[tool.poetry]
name = "lambda-runtime-tweeter-prepare"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
awscli = "^1.17.9"
boto3 = "^1.11.9"
prompt_toolkit = "^3.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
